rns-lang/tests/snapshots/lexer-integers-invalid_format_mixed.snap
---
source: jasm/tests/integration_test.rs
expression: "&combined"
---
----- INPUT  -----
.code 12a34

----- STDOUT -----

----- STDERR -----
Error: lexing error
   ╭─[ test_data/integration/lexer/integers/invalid_format_mixed.ja:1:7 ]
   │
 1 │ .code 12a34
   │       ──┬──  
   │         ╰──── '12a34' is not a valid integer
   │ 
   │ Note: Expected a valid integer number.
───╯
